feat: establish the API foundation (#16)
